Revert "Fix white gaps between homepage sections (#19)"
This reverts commit 13a768a886a7ee6fb6f7b13dff93a2695f10dd48.

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -6347,7 +6347,7 @@ p a:not(.button):focus,
   z-index: 101;
 }
 .page-container {
-  background-color: var(--color-content);
+  background-color: #fff;
 }
 .is-moved-by-drawer,
 .js-drawer-open .is-moved-by-drawer {
